test/fail/multiline-text-line-number.mo
"check that the

line number of the error is correct.

The asterisks should
produce an error

" *;
